alignment fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body{
     background-image: url("../images/qbkls.png");
+    margin: 0px;
 }
 
 .pageTitle{
@@ -11,8 +12,8 @@ body{
     width: 200px;
     float: left;
     color: white;
-    margin: 1px 0px 0px 334px;
-    padding: 0px 2px 11px 6px;
+    margin: 0px 0px 0px 334px;
+    padding: 0px 5px 11px 6px;
 }
 
 header{
@@ -55,7 +56,7 @@ header{
 }
 #contact {
     float: right;
-    margin: 0px 160px 0px 10px;
+    margin: 0px 190px 0px 10px;
 }
 #contactBtn {
     height: 50px;
